Add the git alias logk.
Signed-off-by: Daniel Tsai <danielt@bsquare.com>

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,5 +5,7 @@
     email = galoistsai@gmail.com
 [color]
     ui = auto
+[alias]
+    logk = log --decorate --graph --oneline
 [commit]
     template = /home/tsaicw/.git-template
