--- a/gemini/settings.json
+++ b/gemini/settings.json
@@ -10,6 +10,16 @@
         "Authorization": "Bearer "
       },
       "timeout": 5000
+    },
+    "aws-knowledge-mcp-server": {
+      "httpUrl": "https://knowledge-mcp.global.api.aws"
+    },
+    "context7": {
+      "httpUrl": "https://mcp.context7.com/mcp",
+      "headers": {
+        "CONTEXT7_API_KEY": "",
+        "Accept": "application/json, text/event-stream"
+      }
     }
   },
   "general": {
